--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Transcript API</title>
+    <title>Master YouTube API</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -73,13 +73,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>YouTube Transcript API</h1>
-        <p style="text-align: center; margin-top: -1rem; margin-bottom: 1.5rem;">Enter a YouTube video ID to fetch its details and transcript.</p>
+        <h1>Master YouTube API</h1>
+        <p style="text-align: center; margin-top: -1rem; margin-bottom: 1.5rem;">Enter a YouTube video ID to fetch all its data in parallel.</p>
         <div class="input-group">
-            <input type="text" id="videoId" placeholder="e.g., l58hKc239s8">
-            <button id="submitBtn">Fetch Data</button>
+            <input type="text" id="videoId" placeholder="e.g., dQw4w9WgXcQ">
+            <button id="submitBtn">Fetch All Data</button>
         </div>
-        <div id="loader">Loading...</div>
+        <div id="loader">Fetching...</div>
         <pre id="results">API response will be shown here...</pre>
     </div>
 
@@ -95,9 +95,12 @@
                 alert('Please enter a YouTube Video ID.');
                 return;
             }
-            const apiUrl = `/api/transcript?v=${videoId}`;
+            // Naye /api/fetch endpoint ko call karenge
+            const fieldsToFetch = 'details,comments,transcript';
+            const apiUrl = `/api/fetch?id=${videoId}&fields=${fieldsToFetch}`;
+            
             loader.style.display = 'block';
-            resultsPre.textContent = '';
+            resultsPre.textContent = 'Fetching data from multiple sources...';
             try {
                 const response = await fetch(apiUrl);
                 const data = await response.json();
