--- a/public/index.html
+++ b/public/index.html
@@ -3,118 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master YouTube API</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #f0f2f5;
-            color: #1c1e21;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            background-color: #ffffff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 800px;
-        }
-        h1 {
-            color: #1877f2;
-            text-align: center;
-            margin-bottom: 1.5rem;
-        }
-        .input-group {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 1.5rem;
-        }
-        #videoId {
-            flex-grow: 1;
-            padding: 10px 15px;
-            border: 1px solid #dddfe2;
-            border-radius: 6px;
-            font-size: 16px;
-        }
-        #submitBtn {
-            padding: 10px 20px;
-            background-color: #1877f2;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        #submitBtn:hover {
-            background-color: #166fe5;
-        }
-        #loader {
-            text-align: center;
-            display: none;
-            margin: 20px 0;
-        }
-        pre {
-            background-color: #f5f5f5;
-            padding: 1rem;
-            border-radius: 6px;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            font-family: "Courier New", Courier, monospace;
-            max-height: 400px;
-            overflow-y: auto;
-        }
-    </style>
+    <title>Web Search & Summarize UI</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Master YouTube API</h1>
-        <p style="text-align: center; margin-top: -1rem; margin-bottom: 1.5rem;">Enter a YouTube video ID to fetch all its data in parallel.</p>
-        <div class="input-group">
-            <input type="text" id="videoId" placeholder="e.g., dQw4w9WgXcQ">
-            <button id="submitBtn">Fetch All Data</button>
+        <h1>🔍 AI Search & Summarize</h1>
+        <div class="tabs">
+            <button class="tab-link active" onclick="openTab(event, 'App')">App</button>
+            <button class="tab-link" onclick="openTab(event, 'Analytics')">Analytics</button>
         </div>
-        <div id="loader">Fetching...</div>
-        <pre id="results">API response will be shown here...</pre>
+
+        <div id="App" class="tab-content" style="display: block;">
+            <form id="search-form">
+                <h3>Step 1: Web Search</h3>
+                <label for="query">Search Query</label>
+                <input type="text" id="query" name="query" required>
+
+                <label for="serper_api_key">Your Serper API Key</label>
+                <input type="password" id="serper_api_key" name="serper_api_key" required>
+
+                <div class="row">
+                    <div class="input-group">
+                        <label>Search Type</label>
+                        <div class="radio-group">
+                            <input type="radio" id="st_search" name="search_type" value="search" checked>
+                            <label for="st_search">Search</label>
+                            <input type="radio" id="st_news" name="search_type" value="news">
+                            <label for="st_news">News</label>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                         <label for="num_results">Number of Results: <span id="num-results-value">4</span></label>
+                         <input type="range" id="num_results" name="num_results" min="1" max="20" value="4">
+                    </div>
+                </div>
+
+                <h3>Step 2: AI Summarization</h3>
+                <label>Research Mode</label>
+                 <div class="radio-group">
+                    <input type="radio" id="rm_normal" name="research_mode" value="normal" checked>
+                    <label for="rm_normal">Normal (Fast Summary)</label>
+                    <input type="radio" id="rm_deep" name="research_mode" value="deep">
+                    <label for="rm_deep">Deep (Detailed Report)</label>
+                </div>
+
+                <label for="gemini_api_key">Your Gemini API Key</label>
+                <input type="password" id="gemini_api_key" name="gemini_api_key" placeholder="Leave empty to skip summarization">
+
+                <label for="gemini_model">Gemini Model</label>
+                <input type="text" id="gemini_model" name="gemini_model" value="gemini-1.5-flash-latest">
+
+                <button type="submit" id="submit-button">Search & Summarize</button>
+            </form>
+             <div class="output-container">
+                <label for="output">Result</label>
+                <textarea id="output" rows="20" readonly></textarea>
+            </div>
+        </div>
+
+        <div id="Analytics" class="tab-content">
+            <div class="chart-container">
+                <canvas id="requestsChart"></canvas>
+            </div>
+             <div class="chart-container">
+                <canvas id="avgTimeChart"></canvas>
+            </div>
+        </div>
     </div>
 
+    <!-- UI/Style Files (No changes needed, but for completeness) -->
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: #121212; color: #e0e0e0; margin: 0; padding: 20px; }
+        .container { max-width: 900px; margin: 0 auto; background-color: #1e1e1e; padding: 25px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.3); }
+        h1 { text-align: center; color: #bb86fc; }
+        h3 { color: #03dac6; border-bottom: 1px solid #333; padding-bottom: 8px; margin-top: 25px; }
+        label { display: block; margin: 15px 0 5px; font-weight: bold; }
+        input[type="text"], input[type="password"], textarea { width: 100%; padding: 10px; background-color: #2c2c2c; border: 1px solid #444; border-radius: 4px; color: #e0e0e0; box-sizing: border-box; }
+        textarea { resize: vertical; }
+        button { width: 100%; padding: 12px; background-color: #bb86fc; color: #121212; border: none; border-radius: 4px; font-size: 16px; font-weight: bold; cursor: pointer; margin-top: 20px; transition: background-color 0.2s; }
+        button:disabled { background-color: #555; cursor: not-allowed; }
+        .row { display: flex; gap: 20px; align-items: center; }
+        .input-group { flex: 1; }
+        .radio-group { display: flex; gap: 15px; align-items: center; }
+        .radio-group label { font-weight: normal; margin: 0; }
+        .tabs { overflow: hidden; border-bottom: 1px solid #333; margin-bottom: 20px; }
+        .tab-link { background-color: inherit; float: left; border: none; outline: none; cursor: pointer; padding: 14px 16px; transition: 0.3s; font-size: 17px; color: #aaa; }
+        .tab-link.active { background-color: #bb86fc; color: #121212; }
+        .tab-content { display: none; padding: 6px 12px; }
+        .chart-container { margin-top: 20px; }
+    </style>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        const videoIdInput = document.getElementById('videoId');
-        const submitBtn = document.getElementById('submitBtn');
-        const resultsPre = document.getElementById('results');
-        const loader = document.getElementById('loader');
-
-        submitBtn.addEventListener('click', async () => {
-            const videoId = videoIdInput.value.trim();
-            if (!videoId) {
-                alert('Please enter a YouTube Video ID.');
-                return;
-            }
-            // Naye /api/fetch endpoint ko call karenge
-            const fieldsToFetch = 'details,comments,transcript';
-            const apiUrl = `/api/fetch?id=${videoId}&fields=${fieldsToFetch}`;
-            
-            loader.style.display = 'block';
-            resultsPre.textContent = 'Fetching data from multiple sources...';
-            try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-                if (!response.ok) {
-                    resultsPre.textContent = `Error: ${data.error || 'Something went wrong'}`;
-                } else {
-                    resultsPre.textContent = JSON.stringify(data, null, 2);
+        document.addEventListener('DOMContentLoaded', () => {
+            const form = document.getElementById('search-form');
+            const output = document.getElementById('output');
+            const submitButton = document.getElementById('submit-button');
+            const slider = document.getElementById('num_results');
+            const sliderValue = document.getElementById('num-results-value');
+            slider.addEventListener('input', () => { sliderValue.textContent = slider.value; });
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                output.value = "Searching and summarizing... Please wait.";
+                submitButton.disabled = true;
+                const formData = new FormData(form);
+                const data = Object.fromEntries(formData.entries());
+                data.num_results = parseInt(data.num_results, 10);
+                try {
+                    const response = await fetch('/api/search', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(data)
+                    });
+                    const result = await response.json();
+                    output.value = result.result;
+                } catch (error) {
+                    output.value = "An error occurred: " + error.message;
+                } finally {
+                    submitButton.disabled = false;
                 }
-            } catch (error) {
-                resultsPre.textContent = `An unexpected error occurred: ${error.message}`;
-            } finally {
-                loader.style.display = 'none';
-            }
+            });
+            loadAnalytics();
         });
+        function openTab(evt, tabName) {
+            document.querySelectorAll(".tab-content").forEach(tc => tc.style.display = "none");
+            document.querySelectorAll(".tab-link").forEach(tl => tl.classList.remove("active"));
+            document.getElementById(tabName).style.display = "block";
+            evt.currentTarget.classList.add("active");
+        }
+        let requestsChart, avgTimeChart;
+        async function loadAnalytics() {
+            try {
+                const response = await fetch('/api/analytics');
+                const data = await response.json();
+                const reqCtx = document.getElementById('requestsChart').getContext('2d');
+                if(requestsChart) requestsChart.destroy();
+                requestsChart = new Chart(reqCtx, { type: 'bar', data: { labels: data.requestsData.map(d => d.date), datasets: [{ label: 'Daily Requests', data: data.requestsData.map(d => d.count), backgroundColor: 'rgba(187, 134, 252, 0.6)' }] }});
+                const timeCtx = document.getElementById('avgTimeChart').getContext('2d');
+                if(avgTimeChart) avgTimeChart.destroy();
+                avgTimeChart = new Chart(timeCtx, { type: 'bar', data: { labels: data.avgTimeData.map(d => d.date), datasets: [{ label: 'Avg. Response Time (s)', data: data.avgTimeData.map(d => d.avg_time), backgroundColor: 'rgba(3, 218, 198, 0.6)' }] }});
+            } catch (error) { console.error("Failed to load analytics:", error); }
+        }
     </script>
 </body>
 </html>
